# designora

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  settings.json
backend/: .dockerignore  .env  Dockerfile  alembic-canonical.ini  alembic.ini  designora.db  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/.kiro/specs/backend-architecture-refactor/: .config.kiro  design.md  requirements.md  tasks.md
backend/app/: __init__.py  main.py
backend/app/admin/: admin_panel.py  authentication.py  views.py
backend/app/admin/folder_views/: base.py  courses.py  dashboard.py  payments.py  users.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 269b6df9a2b8_add_provider_column_to_users.py  36d8c7d581aa_payments_orders_coupons.py  4b99af5f2c1c_fix_fk.py  4d43538a95be_add_streak_days_column.py  62d5ea025554_add_provider_column_to_users.py  8250541035bb_add_notification_columns.py  add_profile_columns.py  c3deada45f15_add_last_login_date_column.py  cb50ebc4efbf_add_level_to_user.py  eca2f46624ee_add_points_to_user.py  f3a9c1b2d4e6_bosqich3_learning_quality.py  fbda3d5e228c_initial.py  g5b1c2d3e4f7_bosqich4_discovery_community.py  h6c2d3e4f5a8_security_refresh_tokens.py  i7d3e4f5a6b9_analytics_events.py  j8e4f5a6b7c0_instructor_application.py  j8e4f5a6b7c0_portfolio_projects.py  k9f5a6b7c8d1_learning_paths.py  l0a6b7c8d9e2_calendar_events.py  m1b7c8d9e0f3_reminder_preferences.py  n2c8d9e0f1a4_video_player_progress.py  o3d9e0f1a2b5_notes_bookmarks.py  p4e0f1a2b3c6_course_builder_3_20.py  q5f1a2b3c4d7_checkout_ux_3_22.py  r6a2b3c4d5e8_monetization_3_23.py  s7b3c4d5e6f9_course_forum_3_24.py  t8c4d5e6f7a0_gamification_3_25.py  u9d5e6f7a8b1_offline_sync_3_27.py  v0f6a7b8c9d2_admin_audit_3_31.py  w1a7b8c9d0e3_moderation_3_32.py  x2b8c9d0e1f4_onboarding_profile.py
backend/app/alembic_canonical/: README  env.py
backend/app/alembic_canonical/versions/: 20260712_01_canonical_baseline.py
backend/app/core/: admin_guard.py  config.py  database.py  email.py  logger.py  metrics.py  middleware.py  monitoring.py  password.py  performance.py  security.py
backend/app/models/: Course.py  __init__.py  admin_audit_log.py  analytics_event.py  assignment.py  assignment_submission.py  badge.py  blog.py  calendar_event.py  certificate.py  coupon.py  course_version.py  enrollment.py  forum.py  gamification_v2.py  learning_path.py  lesson.py  lesson_progress.py  moderation.py  module.py  monetization.py  note.py  notification.py  offline_sync.py  order.py  password_reset.py  payment.py  portfolio_project.py  progress.py  qa.py  quiz.py  quiz_attempt.py  referral.py  refresh_token.py  reminder_preference.py  review.py  user.py
backend/app/routers/: __init__.py  admin_courses.py  admin_dashboard.py  analytics.py  assignments.py  assignments_upload.py  auth.py  blog.py  calendar.py  certificates.py  checkout_experience.py  course_builder.py  course_forum.py  courses_api.py  discovery.py  forum.py  gamification.py  gamification_v2.py  google.py  instructor.py  instructor_analytics.py  instructors.py  learning.py  learning_paths.py  media.py  moderation.py  monetization.py  notes.py  notifications.py  offline_sync.py  onboarding.py  pages.py  payments.py  portfolio.py  privacy.py  profile.py  qa.py  quiz.py  referrals.py  reviews.py  (+6 more)
backend/app/services/: analytics_service.py  cache.py  certificate_service.py  gamification_service.py  i18n_service.py  notification_service.py  payment_service.py  quiz_service.py  recommendation_service.py  review_service.py  seo_service.py  token_service.py  upload_service.py  video_service.py
backend/app/static/css/: designora.css  (+1 more)
backend/app/utils/: email.py  routes.py
backend/scripts/: seed_courses.py
backend/tests/: conftest.py  test_admin_courses.py  test_admin_dashboard_3_31.py  test_alembic_lifecycle.py  test_alembic_migrations.py  test_analytics_api.py  test_analytics_service.py  test_assignment_portfolio_e2e.py  test_auth_api.py  test_blog_api.py  test_cache.py  test_calendar_api.py  test_checkout_ux_3_22.py  test_click_api.py  test_community_api.py  test_course_builder_3_20.py  test_course_filters_3_12.py  test_course_forum_3_24.py  test_courses_api.py  test_discovery_api.py  test_gamification.py  test_gamification_3_25.py  test_global_search_api.py  test_i18n_service.py  test_instructor_analytics_3_21.py  test_instructor_api.py  test_instructor_home_3_19.py  test_learning_api.py  test_learning_paths_api.py  test_lms_models.py  test_main.py  test_media_api.py  test_metrics.py  test_migrations.py  test_models.py  test_moderation_3_32.py  test_monetization_3_23.py  test_notes_bookmarks_3_18.py  test_offline_sync_3_27.py  test_password.py  (+22 more)
(+253 files in other folders)
