[project]
name = "designora-backend"
version = "1.0.0"
description = "Designora — online dizayn ta'lim platformasi backend (FastAPI)"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
extend-exclude = '''
/(
 | \.venv
 | app/alembic
 | app/routers/discovery\.py
 | tests/test_global_search_api\.py
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["app/alembic", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501", "B008", "E712", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "F401", "F811"]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=app --cov-report=term-missing --cov-report=xml"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = [
 "app/alembic/*",
 "app/admin/*",
 "tests/*",
 "app/main.py",
 "app/routers/pages.py",
 "app/core/email.py",
 "app/utils/email.py",
 "app/routers/google.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
 "pragma: no cover",
 "if __name__ == .__main__.:",
 "raise NotImplementedError",
]
