[project]
name = "designora-backend"
version = "1.0.0"
description = "Designora — online dizayn ta'lim platformasi backend (FastAPI)"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
extend-exclude = '''
/(
  | \.venv
  | app/alembic
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["app/alembic", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501", "B008", "E712", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "F401", "F811"]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=app.services --cov-report=term-missing --cov-report=xml --cov-fail-under=70"
filterwarnings = ["ignore::DeprecationWarning"]

# The enforced baseline covers production business services. API behavior is
# additionally protected by the full integration suite executed in the same job.
[tool.coverage.run]
source = ["app/services"]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
